name:                atom-om1
version:             0.1.0.0
synopsis:            OM1 in atom
license:             MIT
license-file:        LICENSE
author:              Benjamin Jones
maintainer:          bjones@galois.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

-- extra-source-files:  generated/.c
--                    , generated/fibDev.h
--                    , generated/fibDrv.c
--                    , generated/fibDrv.h

executable atom-om1
  main-is:             Main.hs
  other-modules:       AtomOM1
  build-depends:
    base >= 4.8    && < 4.9,
    atom >= 1.0.13 && < 2
  default-language:    Haskell2010
