name:                atom-om1
version:             0.1.0.0
synopsis:            OM1 in atom
author:              Benjamin Jones
maintainer:          bjones@galois.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  generated/om1.h
                   , generated/om1.c

executable atom-om1
  main-is:             Main.hs
  other-modules:       AtomOM1
  build-depends:
    base >= 4.8    && < 4.9,
    atom >= 1.0.13 && < 2
  default-language:    Haskell2010
