name:                atom-smp
version:             0.1.0.0
synopsis:            smp in atom
author:              Benjamin Jones
maintainer:          bjones@galois.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  smp.h
                   , smp.c

executable atom-smp
  main-is:             Main.hs
  other-modules:       Atomsmp
  build-depends:
    base >= 4.8    && < 4.9,
    atom >= 1.0.13 && < 2
  default-language:    Haskell2010
